# CodeSamples

./: README.md
CPlusPlus1/: GRG009CPPUnitAsAHabit.sln  README.md
CPlusPlus1/GetRealGoodUtils/: GetRealGoodUtils.vcxproj  GetRealGoodUtils.vcxproj.filters  arrays.cpp  arrays.h  collections.cpp  collections.h  maths.cpp  maths.h  objects.cpp  objects.h  strings.cpp  strings.h
CPlusPlus1/GetRealGoodUtils.Tests/: GetRealGoodUtils.Tests.vcxproj  GetRealGoodUtils.Tests.vcxproj.filters  arrays_tests.cpp  collections_tests.cpp  maths_tests.cpp  object_tests.cpp  pch.h  strings_tests.cpp
CPlusPlus2/: CMakeLists.txt  README.md  main.cpp
CPlusPlus2/files/: arrays.cpp  collections.cpp  maths.cpp  objects.cpp  strings.cpp
CPlusPlus2/headers/: arrays.h  collections.h  maths.h  objects.h  strings.h
CPlusPlus2/tests/: arrays_tests.cpp  collections_tests.cpp  maths_tests.cpp  objects_tests.cpp  strings_tests.cpp
CSharp/: GRG002NUnitAsAHabit.sln
CSharp/GetRealGoodUtils/: Arrays.cs  ArraysException.cs  Collections.cs  CollectionsException.cs  Maths.cs  MathsException.cs  Objects.cs  Strings.cs  StringsException.cs
CSharp/GetRealGoodUtils.Tests/: ArraysTests.cs  CollectionsTests.cs  GetRealGoodUtils.Tests.csproj  MathsTests.cs  ObjectsTests.cs  ReSharperTestRunner.dll.config  StringsTests.cs  testhost.dll.config
Go/: README.md  go.mod
Go/files/: arrays.go  collections.go  errors.go  maths.go  objects.go  strings.go
Go/tests/: arrays_test.go  collections_test.go  (+3 more)
Java/: README.md
Java-CodeCoverage/: README.md
Python/: README.md
Typescript/: README.md
(+42 files in other folders)
